--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,17 +9,41 @@ body {
   bottom: 0px;
   right: 0px;
   left: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer {
-  position: relative;
-  text-align: center;
-  background-color: #2D882D;
-  height: 1.4em;
-  margin-top: -1.4em;
-  font-size: 1em;
+.constraints {
+  display: flex;
+  flex-direction: column;
+}
+.constraints--row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.constraints--cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.25em;
+  margin-left: 0.25em;
+}
+.constraint {
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  background-color: red;
 }
 
-.footer a {
-  padding: 0 1em;
+.ingredients {
+  width: calc(8*(2.5em + 0.25em) + 0.25em); /* To match constraints width. */
+  border-collapse: collapse;
+}
+.ingredients--cell {
+  text-align: right;
+  font-size: 0.8em;
+  width: 12.5%;
+  border: solid 1px black;
 }
