--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,23 +27,54 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 0.25em;
-  margin-left: 0.25em;
+  margin-left: 0.25rem;
 }
 .constraint {
-  width: 2.5em;
-  height: 2.5em;
+  box-sizing: border-box;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5em;
+
+}
+.constraint--red {
   background-color: red;
+}
+.constraint--green {
+  background-color: green;
+}
+.constraint--blue {
+  background-color: blue;
+}
+.constraint--neutral {
+  background-color: gray;
+}
+.constraint--plus::before {
+  content: "+";
+}
+.constraint--minus::before {
+  content: "-";
+}
+.constraint--neutral::before {
+  content: "N";
 }
 
 .ingredients {
-  width: calc(8*(2.5em + 0.25em) + 0.25em); /* To match constraints width. */
+  width: calc(8*(2.5rem + 0.25rem) + 0.25rem); /* To match constraints width. */
   border-collapse: collapse;
 }
 .ingredients--cell {
   text-align: right;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   width: 12.5%;
   border: solid 1px black;
+}
+
+.clickable {
+  cursor: pointer;
 }
